     - Web interface:
           - improved display of byte sizes (flexible unit change) (GET)
	   - added symbolic link support (POST)
	   - added view filter (GET)
	   - added list options (GET)
	   - added quota limit exceeded highlighting (GET)
	   - added extension support (GET)
	   - added view support (GET)
	   - fixed long navigation path bug (GET)
     - improved performance with the NYT profiler
     - fixed symlink move bug
     - fixed minor webdav.conf returns wrong result code bug (thanx Andrius Preimantas andrius.preimantas@gmail.com) 

0.7.0: 2011/29/04
     - fixed major search bug (SEARCH; thx jfotop@ath.forthnet.gr)
     - added folder redirect feature for disabled file/folder management requested by Laurent Bardi <Laurent.Bardi@ipbs.fr>
     - added (incomplete) french translatations for the Web interface (thanx Laurent Bardi <Laurent.Bardi@ipbs.fr>)
     - added sysinfo feature (GET)
     - added gzip, deflate encoding support (GET)
     - Web interface:
         - fixed mkdir/rename security bug (POST)
         - added UNSELECTABLE_FOLDERS feature (GET)
         - fixed move/rename behavior for folders (POST)
         - added gzip content encoding support (GET)
         - added variable substitution for $HEADER, $LANGSWITCH, $SIGNATURE (GET)
         - fixed localization bug (GET)
         - added htdocs support (GET)
         - added new file feature (GET/POST)
         - added edit feature (GET/POST)
         - moved translations to separate .msg files (GET)
         - moved CSS and javascript to separte files (GET/HEAD)
         - added properties viewer switch (GET)
         - added sidebar view (GET)
         - improved page navigation (GET)
         - changed message box behavior (GET)
         - added file/folder name filtering feature (GET)
         - added $ORDER config parameter (GET)
         - improved folder list sort with cookies (GET)
         - fixed sort bug in search results (GET)